# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: cli.py  gendiff.py  parser.py
gendiff/scripts/: gendiff.py
