[project]
authors = [
    {name = "Bazarov Stas", email = "bazarovstas@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Generator, compares two configuration files and calculates a difference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]